# bluegpt

./: .env.example  AGENTS.md  README.md  mcp.toml  pyproject.toml
app/: __init__.py  agent.py  config.py  main.py  mcp_fast_time.py  mcp_server.py  schemas.py  tools.py
app/agent/: __init__.py  manager.py  session.py  settings.py  utils.py
app/common/: __init__.py  config.py  text.py
app/static/: app.js  index.html  styles.css
app/static/ui/: messages.js  settings.js  stream.js
app/tools/: __init__.py  clients.py  config.py  discovery.py  mcp.py  registry.py
app/tools/clients/: __init__.py  base.py  http.py  stdio.py
app/web/: app.py  routes.py
app/web/static/: index.html
config/: config.toml  mcp.json  mcp.toml  prompts.toml  samples.toml
examples/: backend_example.py  web_example.py
mcps/: time_helper.py  time_helper_http.py
tests/: test_mcp_config.py  test_smoke.py
