[project]
name = "bluegpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "sse-starlette>=2.1.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "fastmcp>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
